objects/Account/fields/Account_Health_Indication__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Indication__c</fullName>
    <formula>IMAGE( CASE( Rating , &quot;Hot&quot;, &quot;/resource/Accountrating/accrating/Green.PNG&quot; , &quot;Warm&quot;, &quot;/resource/Accountrating/accrating/Yellow.PNG&quot; ,&quot;Cold&quot;, &quot;/resource/Accountrating/accrating/Red.PNG&quot;,&quot;&quot;),&quot;Account Health Indication&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Health Indication</label>
    <type>Text</type>
</CustomField>