objects/Account/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <length>40</length>
    <type>Text</type>
</CustomField>