objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Number_of_Employees__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>Account_Health_Indication__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>